fixed bleed in responsive viewports

--- a/client/src/scss/pages/_events.scss
+++ b/client/src/scss/pages/_events.scss
@@ -62,6 +62,7 @@
 
 .events {
   margin: 4rem 0;
+  overflow-x: hidden;
 
   &__header {
     text-align: center;
