--- a/client/src/scss/pages/_home.scss
+++ b/client/src/scss/pages/_home.scss
@@ -166,6 +166,7 @@
     rgba(115, 126, 60, 0.97) 26%,
     rgba(84, 104, 81, 1) 100%
   );
+  overflow-x: hidden;
 
   &__header {
     margin-bottom: 4rem;
@@ -384,6 +385,7 @@
   margin-top: 4rem;
   position: relative;
   z-index: 5;
+  overflow-x: hidden;
 
   &__header {
     margin-bottom: 4rem;
