--- a/client/src/scss/pages/_news.scss
+++ b/client/src/scss/pages/_news.scss
@@ -62,6 +62,7 @@
 
 .news {
   margin: 4rem 0;
+  overflow-x: hidden;
 
   &__header {
     text-align: center;
